style/style.css
* {
  box-sizing: border-box;
}

.flex-container {
  display: flex;
}

html {
  font-family: 'Roboto', sans-serif;
  /* Fluidly shift root font-size from 14px on small phones to 22px on large screens */
  font-size: calc(87.5% + 8 * (100vw - 320px) / 1120);
}

#site-header {
  font-family: 'Roboto Slab', serif;
  font-variant: small-caps;
  font-size: 1.5rem;

  display: flex;
  align-items: center;
  justify-content: center;
}

#site-logo {
  max-width: 3em;
}

#site-header h1 {
  margin: .33em 0;
}

/*
  Media query breakpoints from Skeleton (http://getskeleton.com/#queries)
*/

/* Larger than mobile */
@media (min-width: 400px) {

}

/* Larger than phablet */
@media (min-width: 550px) {

}

/* Larger than tablet */
@media (min-width: 750px) {
  #site-content {
    width: 750px;
    margin-left: auto;
    margin-right: auto;
  }
}

/* Larger than desktop */
@media (min-width: 1000px) {

}

/* Larger than Desktop HD */
@media (min-width: 1200px) {

}

